# ollama-model-explorer

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  config.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  wsgi.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
scripts/: run.bat  run.ps1  run.sh
static/: script.js  style.css
templates/: index.html
tests/: __init__.py  test_app.py
